--- a/Ketch/UserInterface/Dock/DockView.xib
+++ b/Ketch/UserInterface/Dock/DockView.xib
@@ -2,7 +2,6 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6254" systemVersion="14C109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
-        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="DockViewController">
@@ -12,16 +11,10 @@
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="GradientBackgroundView" customModule="Ketch" customModuleProvider="target">
+        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="KetchBackgroundView" customModule="Ketch" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Header" translatesAutoresizingMaskIntoConstraints="NO" id="qrU-Rh-vA5">
-                    <rect key="frame" x="0.0" y="0.0" width="320" height="62"/>
-                    <constraints>
-                        <constraint firstAttribute="width" secondItem="qrU-Rh-vA5" secondAttribute="height" multiplier="160:31" id="dyh-Du-Xdx"/>
-                    </constraints>
-                </imageView>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RLY-Pm-SQ2">
                     <rect key="frame" x="0.0" y="0.0" width="80" height="60"/>
                     <constraints>
@@ -37,7 +30,7 @@
                     </connections>
                 </button>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Your Matches" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="31S-EO-xOp">
-                    <rect key="frame" x="110" y="22" width="100" height="22"/>
+                    <rect key="frame" x="110" y="19" width="100" height="22"/>
                     <fontDescription key="fontDescription" name="AvenirNext-DemiBold" family="Avenir Next" pointSize="16"/>
                     <color key="textColor" red="0.34509803919999998" green="0.67843137249999996" blue="0.67450980390000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <nil key="highlightedColor"/>
@@ -51,19 +44,19 @@
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
             <constraints>
                 <constraint firstAttribute="trailing" secondItem="wgR-pc-Jsx" secondAttribute="trailing" id="1y7-2n-de3"/>
-                <constraint firstItem="qrU-Rh-vA5" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="7Wa-nQ-ckP"/>
-                <constraint firstItem="31S-EO-xOp" firstAttribute="top" secondItem="qrU-Rh-vA5" secondAttribute="top" constant="22" id="AIO-jZ-PnN"/>
-                <constraint firstItem="wgR-pc-Jsx" firstAttribute="top" secondItem="qrU-Rh-vA5" secondAttribute="bottom" id="Jap-4l-ox7"/>
+                <constraint firstAttribute="centerX" secondItem="31S-EO-xOp" secondAttribute="centerX" id="FUI-QT-aIg"/>
                 <constraint firstItem="RLY-Pm-SQ2" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="MbF-B8-1yj"/>
                 <constraint firstItem="wgR-pc-Jsx" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="68" id="Rlo-xm-2uh"/>
                 <constraint firstAttribute="bottom" secondItem="wgR-pc-Jsx" secondAttribute="bottom" id="W6S-Om-K4r"/>
-                <constraint firstItem="qrU-Rh-vA5" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="Z7x-ql-ed4"/>
-                <constraint firstAttribute="trailing" secondItem="qrU-Rh-vA5" secondAttribute="trailing" id="jLz-i6-sMl"/>
+                <constraint firstItem="wgR-pc-Jsx" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="62" id="kXZ-QC-pSC"/>
                 <constraint firstItem="RLY-Pm-SQ2" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="ndZ-7T-wZ3"/>
                 <constraint firstItem="wgR-pc-Jsx" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="rUA-6f-BDQ"/>
-                <constraint firstItem="qrU-Rh-vA5" firstAttribute="centerX" secondItem="31S-EO-xOp" secondAttribute="centerX" id="uyN-4o-REV"/>
+                <constraint firstItem="31S-EO-xOp" firstAttribute="centerY" secondItem="RLY-Pm-SQ2" secondAttribute="centerY" id="zg3-8h-LVL"/>
             </constraints>
             <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
+            <userDefinedRuntimeAttributes>
+                <userDefinedRuntimeAttribute type="boolean" keyPath="showNavButtons" value="NO"/>
+            </userDefinedRuntimeAttributes>
             <variation key="default">
                 <mask key="constraints">
                     <exclude reference="Rlo-xm-2uh"/>
@@ -72,7 +65,4 @@
             <point key="canvasLocation" x="76" y="349"/>
         </view>
     </objects>
-    <resources>
-        <image name="Header" width="320" height="62"/>
-    </resources>
 </document>
