--- a/Ketch/UserInterface/Settings/SettingsView.xib
+++ b/Ketch/UserInterface/Settings/SettingsView.xib
@@ -77,12 +77,13 @@
                         </mask>
                     </variation>
                 </imageView>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bottom-sea" translatesAutoresizingMaskIntoConstraints="NO" id="WTa-5O-A4m">
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="l2F-DP-UVJ" customClass="KetchWaveView" customModule="Ketch" customModuleProvider="target">
                     <rect key="frame" x="0.0" y="535" width="320" height="33"/>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <constraints>
-                        <constraint firstAttribute="width" secondItem="WTa-5O-A4m" secondAttribute="height" multiplier="320:33" id="GR1-eb-3wI"/>
+                        <constraint firstAttribute="height" constant="33" id="78z-m4-Au6"/>
                     </constraints>
-                </imageView>
+                </view>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Version v0.1 (112)" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OLW-ee-in0">
                     <rect key="frame" x="228" y="546" width="83.5" height="12"/>
                     <fontDescription key="fontDescription" type="system" pointSize="10"/>
@@ -186,7 +187,6 @@
             <constraints>
                 <constraint firstItem="Tiq-Jx-Jmw" firstAttribute="top" secondItem="Nrc-Dc-N50" secondAttribute="bottom" constant="32" id="0or-Fj-RLr"/>
                 <constraint firstItem="xt9-MA-Rd9" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="3MR-LT-Kwq"/>
-                <constraint firstAttribute="bottom" secondItem="WTa-5O-A4m" secondAttribute="bottom" id="5hU-Js-Ffy"/>
                 <constraint firstItem="SOZ-ON-PUJ" firstAttribute="centerX" secondItem="wEw-mJ-zT3" secondAttribute="centerX" id="6Hj-SM-N4K"/>
                 <constraint firstItem="SOZ-ON-PUJ" firstAttribute="top" secondItem="wEw-mJ-zT3" secondAttribute="bottom" constant="30" id="8Xf-k5-nTO"/>
                 <constraint firstAttribute="centerX" secondItem="Nrc-Dc-N50" secondAttribute="centerX" id="8s8-ac-Mww"/>
@@ -194,11 +194,12 @@
                 <constraint firstItem="oh4-96-yng" firstAttribute="leading" secondItem="20m-eu-yIP" secondAttribute="leading" id="DJU-Wv-J19"/>
                 <constraint firstItem="3ic-hO-IZ3" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="22" id="DRp-ww-hiL"/>
                 <constraint firstItem="5ee-BL-JGE" firstAttribute="bottom" secondItem="Tiq-Jx-Jmw" secondAttribute="bottom" constant="-2" id="FEr-Xd-9RF"/>
+                <constraint firstAttribute="bottom" secondItem="l2F-DP-UVJ" secondAttribute="bottom" id="GNv-ne-nFL"/>
+                <constraint firstAttribute="trailing" secondItem="l2F-DP-UVJ" secondAttribute="trailing" id="GiL-6v-v1t"/>
                 <constraint firstItem="5ee-BL-JGE" firstAttribute="leading" secondItem="Tiq-Jx-Jmw" secondAttribute="trailing" constant="16" id="HlW-zS-t4O"/>
                 <constraint firstItem="CsQ-Yu-Ry6" firstAttribute="top" secondItem="SOZ-ON-PUJ" secondAttribute="bottom" constant="30" id="MSp-6g-gek"/>
                 <constraint firstItem="Nrc-Dc-N50" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="60" id="Mqx-72-nqb"/>
                 <constraint firstItem="pg4-G6-NiR" firstAttribute="bottom" secondItem="CsQ-Yu-Ry6" secondAttribute="bottom" constant="-2" id="NhN-Zd-yky"/>
-                <constraint firstItem="WTa-5O-A4m" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="O4b-r9-aAl"/>
                 <constraint firstItem="YW7-wb-mH4" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="QZp-PO-fz3"/>
                 <constraint firstItem="wEw-mJ-zT3" firstAttribute="top" secondItem="Tiq-Jx-Jmw" secondAttribute="bottom" constant="30" id="RmA-hw-1oO"/>
                 <constraint firstAttribute="trailingMargin" secondItem="Api-ed-xez" secondAttribute="trailing" constant="24" id="U1C-y9-Fab"/>
@@ -209,8 +210,8 @@
                 <constraint firstAttribute="bottom" secondItem="OLW-ee-in0" secondAttribute="bottom" constant="10" id="edt-W6-qOx"/>
                 <constraint firstItem="Tiq-Jx-Jmw" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leadingMargin" constant="16" id="eld-5l-2Cw"/>
                 <constraint firstItem="Api-ed-xez" firstAttribute="top" secondItem="MPP-9T-yb0" secondAttribute="top" id="i4I-6Z-1fo"/>
-                <constraint firstAttribute="trailing" secondItem="WTa-5O-A4m" secondAttribute="trailing" id="i5s-d3-Gll"/>
                 <constraint firstItem="MPP-9T-yb0" firstAttribute="centerX" secondItem="CsQ-Yu-Ry6" secondAttribute="centerX" id="iyy-yM-g66"/>
+                <constraint firstItem="l2F-DP-UVJ" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="juZ-r7-qd0"/>
                 <constraint firstItem="xt9-MA-Rd9" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="ln9-ZB-BJk"/>
                 <constraint firstAttribute="bottom" secondItem="YW7-wb-mH4" secondAttribute="bottom" id="lsf-om-bcN"/>
                 <constraint firstItem="Api-ed-xez" firstAttribute="bottom" secondItem="MPP-9T-yb0" secondAttribute="bottom" constant="-2" id="r6Z-tU-MSR"/>
@@ -232,7 +233,6 @@
         </view>
     </objects>
     <resources>
-        <image name="bottom-sea" width="320" height="33"/>
         <image name="settings-icon-age" width="25" height="22"/>
         <image name="settings-icon-briefcase" width="26" height="19"/>
         <image name="settings-icon-heightArrow" width="8" height="21"/>
